--- a/src/pages/styleHomePage.css
+++ b/src/pages/styleHomePage.css
@@ -1,9 +1,82 @@
 .container-homePage {
   box-sizing: border-box;
   width: 100%;
-  height: 100vw;
+  height: 1500px;
   background-color: black;
   position: absolute;
   top: 0;
   z-index: -1;
+  margin: 0;
+  padding: 0;
+}
+.img1-homePage {
+  width: 100%;
+  height: 80%;
+  object-fit: cover;
+  filter: brightness(0.4);
+}
+.title-homePage > h1 {
+  font-size: 10rem;
+  font-family: "logofont";
+  font-weight: lighter;
+  position: absolute;
+  top: 200px;
+  right: calc(50% - 284.5px);
+  color: azure;
+}
+.iconoPizza-homePage,
+.iconoPasta-homePage,
+.iconoEnsalada-homePage,
+.iconoPostre-homePage,
+.iconoBebida-homePage {
+  width: 200px;
+  height: 250px;
+  background-color: var(--dLeña-naranja);
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px 40px;
+  box-shadow:
+    0px 0px 30px grey,
+    5px 5px 0px grey;
+}
+.iconoPizza-homePage {
+  position: absolute;
+  top: 600px;
+  left: 100px;
+}
+.iconoPasta-homePage {
+  position: absolute;
+  top: 600px;
+  left: 350px;
+}
+.iconoEnsalada-homePage {
+  position: absolute;
+  top: 600px;
+  left: 600px;
+}
+.iconoPostre-homePage {
+  position: absolute;
+  top: 600px;
+  left: 850px;
+}
+.iconoBebida-homePage {
+  position: absolute;
+  top: 600px;
+  left: 1100px;
+}
+.iconoPizza-homePage > h3,
+.iconoPasta-homePage > h3,
+.iconoEnsalada-homePage > h3,
+.iconoPostre-homePage > h3,
+.iconoBebida-homePage > h3 {
+  font-size: 3rem;
+  font-family: "signika";
+  color: black;
+}
+.iconoPizza-homePage > img,
+.iconoPasta-homePage > img,
+.iconoEnsalada-homePage > img,
+.iconoPostre-homePage > img,
+.iconoBebida-homePage > img {
+  width: 80%;
 }
