--- a/src/components/card/style-ProductCard.css
+++ b/src/components/card/style-ProductCard.css
@@ -1,7 +1,6 @@
 .container-productCard {
-  margin-top: 200px;
   color: rgb(255, 255, 255);
-
+  margin: 15px;
   width: 450px;
   display: flex;
   align-items: center;
@@ -11,7 +10,18 @@
   padding: 10px 20px;
   transition: 0.3s;
 }
-.text-productCard > h4 {
+.price-productCard {
+  display: flex;
+  justify-content: space-between;
+  padding-right: 8px;
+}
+.price-productCard > p {
+  border: 1px solid #b8001f;
+  border-radius: 50px;
+  padding: 5px;
+  font-family: "signika";
+}
+.price-productCard > h4 {
   font-size: 1.3rem;
   font-family: "signika";
 }
