--- a/src/components/footer/style-Footer.css
+++ b/src/components/footer/style-Footer.css
@@ -6,6 +6,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: absolute;
+  bottom: 0;
 }
 .container-footer > img {
   height: 150px;
