--- a/src/pages/product/pizza/style-Pizza.css
+++ b/src/pages/product/pizza/style-Pizza.css
@@ -1,44 +1,17 @@
 .container-pizza {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 1050px;
+  background-image: url("../../../assets//images/pizza-home.jpg");
+  background-size: cover;
+  padding-top: 160px;
+  padding-bottom: 20px;
+  min-height: calc(100dvh - 150px);
+  height: auto;
 }
-.seccion1-drink {
-  /*   background: rgb(2, 2, 2);
-  background: linear-gradient(
-    90deg,
-    rgba(2, 2, 2, 1) 6%,
-    rgba(2, 3, 0, 1) 12%,
-    rgba(14, 8, 5, 1) 23%,
-    rgba(24, 16, 9, 1) 34%,
-    rgba(29, 18, 12, 1) 44%,
-    rgba(46, 36, 30, 1) 56%,
-    rgba(22, 13, 11, 1) 70%,
-    rgba(17, 8, 6, 1) 78%,
-    rgba(7, 2, 1, 1) 97%,
-    rgba(3, 2, 0, 1) 100%
-  ); */
-}
-.seccion1-pizza > img {
-  width: 100%;
-  filter: brightness(0.4);
 
-  position: absolute;
-  top: 0;
-  z-index: -1;
-}
-.seccion1-pizza > h2 {
-  color: white;
-
+.container-pizza > h4 {
   font-size: 5rem;
+  color: white;
   font-family: "logofont";
   font-weight: lighter;
-  position: relative;
-  top: 120px;
-  left: 400px;
-}
-.footer-piza {
-  position: relative;
-  bottom: 0;
+  text-align: center;
+  margin-bottom: 100px;
 }
