--- a/src/pages/product/salad/style-Salad.css
+++ b/src/pages/product/salad/style-Salad.css
@@ -15,3 +15,16 @@
   text-align: center;
   margin-bottom: 100px;
 }
+.button-salad {
+  position: fixed;
+  bottom: 200px;
+  right: 50px;
+  margin: 15px;
+  display: flex;
+}
+@media (max-width: 1100px) {
+  .button-salad {
+    display: flex;
+    flex-direction: column;
+  }
+}
