limpieza de código

--- a/src/App.css
+++ b/src/App.css
@@ -22,9 +22,9 @@
   padding: 0;
   box-sizing: border-box;
 }
-:root {
+/* :root {
   --dLeña-azul: #116d6e;
   --dLeña-naranja: #e3651d;
   --dLeña-rosa: #ffb0b0;
   --dLeña-gris: #efecec;
-}
+} */
