--- a/src/pages/admin/style-Statistic.css
+++ b/src/pages/admin/style-Statistic.css
@@ -1,4 +1,4 @@
-.container-product {
+.container-statistic {
   /* background-color: rgb(70, 29, 1); */
   background-image: url(../../assets/images/fondo-admin.jpg);
   background-size: contain;
@@ -8,7 +8,7 @@
   min-height: calc(100dvh - 150px);
   height: auto;
 }
-.container-product > h4 {
+.container-statistic > h4 {
   font-size: 4.5rem;
   color: white;
   font-family: "logofont";
@@ -17,24 +17,8 @@
   margin-bottom: 100px;
 }
 
-.button-product,
-.buttonAdd-product {
-  padding: 1px 10px;
-  background-color: white;
-  border-radius: 10px;
-}
-/* .productList-product {
-  padding-bottom: 50px;
-} */
-
-.button-product:hover,
-.buttonAdd-product:hover {
-  background-color: #b8001f;
-  color: white;
-  transition: 0.4s;
-}
 @media (max-width: 899px) {
-  .container-product > h4 {
+  .container-statistic > h4 {
     font-size: 2rem;
   }
 }
