--- a/src/pages/admin/style-user.css
+++ b/src/pages/admin/style-user.css
@@ -2,10 +2,10 @@
   /* background-color: rgb(70, 29, 1); */
   background-image: url(../../assets/images/fondo-admin.jpg);
   background-size: contain;
-  padding-bottom: 170;
+  padding-bottom: 100px;
   padding-top: 120px;
 
-  min-height: 100dvh;
+  min-height: calc(100dvh - 150px);
   height: auto;
 }
 .container-user > h4 {
