--- a/src/pages/user/style-Sumary.css
+++ b/src/pages/user/style-Sumary.css
@@ -1,3 +1,21 @@
+.container-sumary {
+  background-image: url("../../assets//images/sumary-home.jpg");
+  background-size: cover;
+  padding-top: 160px;
+  padding-bottom: 20px;
+  min-height: calc(100dvh - 150px);
+  height: auto;
+  color: white;
+  padding-bottom: 50px;
+}
+.container-sumary > h4 {
+  font-size: 4.5rem;
+
+  font-family: "logofont";
+  font-weight: lighter;
+  text-align: center;
+  margin-bottom: 100px;
+}
 .rowProduct-sumary {
   font-size: 1.2rem;
   font-family: "signika";
@@ -21,4 +39,43 @@
   box-shadow: 0px 0px 10px #b8001f;
   border-radius: 10px;
   padding: 2px;
+}
+.button-sumary {
+  position: fixed;
+  bottom: 200px;
+  right: 50px;
+  margin: 15px;
+  display: flex;
+}
+.input-sumary {
+  background-color: rgba(255, 255, 255, 0.767);
+
+  padding: 50px 20px;
+  border: 1px solid white;
+  border-radius: 20px;
+  box-shadow: 2px 2px 8px rgba(255, 255, 255, 0.767);
+}
+.input-sumary:focus {
+  background-color: rgba(255, 255, 255, 0.767);
+}
+.input-sumary > p {
+  margin-bottom: 50px;
+  font-size: 2rem;
+  font-family: "signika";
+}
+
+.form-sumary {
+  margin-block: 50px;
+}
+@media (max-width: 1100px) {
+  .button-sumary {
+    display: flex;
+    flex-direction: column;
+  }
+}
+@media (max-width: 900px) {
+  .button-sumary {
+    position: static;
+    max-width: 572px;
+  }
 }
