--- a/src/pages/admin/style-product.css
+++ b/src/pages/admin/style-product.css
@@ -1,10 +1,8 @@
 .container-product {
-  /* background-color: rgb(70, 29, 1); */
   background-image: url(../../assets/images/fondo-admin.jpg);
   background-size: auto;
   padding-bottom: 100px;
   padding-top: 120px;
-
   min-height: calc(100dvh - 150px);
   height: auto;
 }
@@ -16,17 +14,13 @@
   text-align: center;
   margin-bottom: 100px;
 }
-
 .button-product,
 .buttonAdd-product {
   padding: 1px 10px;
   background-color: white;
   border-radius: 10px;
+  font-family: "signika";
 }
-/* .productList-product {
-  padding-bottom: 50px;
-} */
-
 .button-product:hover,
 .buttonAdd-product:hover {
   background-color: #b8001f;
@@ -46,14 +40,11 @@
 .radioProduct-produc {
   display: flex;
 }
-
 .radioProduct-produc > p {
   font-size: 1rem;
   color: white;
-
   margin-block: auto;
 }
-
 @media (max-width: 899px) {
   .container-product > h4 {
     font-size: 2rem;
