--- a/src/pages/product/dessert/style-Dessert.css
+++ b/src/pages/product/dessert/style-Dessert.css
@@ -27,3 +27,9 @@
     flex-direction: column;
   }
 }
+@media (max-width: 900px) {
+  .button-dessert {
+    position: static;
+    max-width: 572px;
+  }
+}
