--- a/src/pages/product/pizza/style-Pizza.css
+++ b/src/pages/product/pizza/style-Pizza.css
@@ -27,3 +27,9 @@
     flex-direction: column;
   }
 }
+@media (max-width: 900px) {
+  .button-pizza {
+    position: static;
+    max-width: 572px;
+  }
+}
