--- a/src/pages/product/salad/style-Salad.css
+++ b/src/pages/product/salad/style-Salad.css
@@ -27,3 +27,9 @@
     flex-direction: column;
   }
 }
+@media (max-width: 900px) {
+  .button-salad {
+    position: static;
+    max-width: 572px;
+  }
+}
