--- a/src/components/card/style-ProductCard.css
+++ b/src/components/card/style-ProductCard.css
@@ -19,6 +19,7 @@
   border-radius: 50px;
   padding: 5px;
   font-family: "signika";
+  margin-block: auto;
 }
 .price-productCard > h4 {
   font-size: 1.3rem;
